--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
     </script>
 </head>
 
-<body style="background:url('../img/wood1.jpg') fixed;">
+<body style="background:url('img/wood1.jpg') fixed;">
     <div class="navbar navbar-inverse navbar-fixed-top" style="margin:0px;">
         <div class="navbar-inner">
             <div class="container-fluid">
@@ -33,20 +33,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="/">EEB Hub Simulation Platform</a>
+                <a class="brand" href="/platform/">EEB Hub Simulation Platform</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li>
-                            <a href="/lite">LITE</a>
+                            <a href="lite">LITE</a>
                         </li>
                         <li>
-                            <a href="/partial">PARTIAL</a>
+                            <a href="partial">PARTIAL</a>
                         </li>
                         <li>
-                            <a href="/substantial">SUBSTANTIAL</a>
+                            <a href="substantial">SUBSTANTIAL</a>
                         </li>
                         <li>
-                            <a href="/comprehensive">COMPREHENSIVE</a>
+                            <a href="comprehensive">COMPREHENSIVE</a>
                         </li>
                     </ul>
                     
@@ -79,7 +79,7 @@
         <div class="span3">
             <h3 class="text-center">Lite</h3>
             <span class="house-center">
-                <a class="svg" href="/lite">
+                <a class="svg" href="lite">
                     <img src="img/lite-house.svg" alt="lite simulation" width="130" height="130" />
                 </a>
             </span>
@@ -89,7 +89,7 @@
         <div class="span3">
             <h3 class="text-center">Partial</h3>
             <span class="house-center">
-                <a href="/partial">
+                <a href="partial">
                     <img src="img/partial-house.svg" alt="partial simulation" width="130" height="130" />
                 </a>
             </span>
@@ -99,7 +99,7 @@
         <div class="span3">
             <h3 class="text-center">Substantial</h3>
             <span class="house-center">
-                <a href="/substantial">
+                <a href="substantial">
                     <img src="img/substantial-house.svg" alt="substantial simulation" width="130" height="130" />
                 </a>
             </span>
@@ -109,7 +109,7 @@
         <div class="span3">
             <h3 class="text-center">Comprehensive</h3>
             <span class="house-center">
-                <a href="/comprehensive">
+                <a href="comprehensive">
                     <img src="img/comprehensive-house.svg" alt="comprehensive simulation" width="130" height="130" />
                 </a>
             </span>
@@ -121,7 +121,7 @@
     <div class="about row-fluid">
         <h2 class="text-center">What is a simulation platform?</h2>
         <div class="pagination-centered">
-            <a href="http://rmt.eebhub.org/comprehensive2/energy-use_example.php"><img src="img/simulation.png" alt="simulation"/></a>
+            <a href="/comprehensive/energy-use_example.php"><img src="img/simulation.png" alt="simulation"/></a>
         </div>
         <h4 class="text-center">a SIMULATION is a technique of representing the real world with the virtual world</h4>
         <br/>
@@ -133,7 +133,7 @@
         <div class="pagination-centered">
             <a href="vision"><img src="img/buildings.png" alt="buildings" /></a>
         </div>
-        <h4 class="text-center">building industry stakeholders will be empowered to make informed decisions on <a href="http://rmt.eebhub.org/game/tracking-sheet.php" style="color: inherit;">how to REDUCE ENERGY consumption in BUILDINGS</a></h4>
+        <h4 class="text-center">building industry stakeholders will be empowered to make informed decisions on <a href="/game/tracking-sheet.php" style="color: inherit;">how to REDUCE ENERGY consumption in BUILDINGS</a></h4>
         <br/>
         <div class="pagination-centered">
             <a href="http://www.eebhub.org"><img src="img/eebhub-gray7.png" width="120" height="86" alt="eebhub" /></a>
