--- a/views/lite.ejs
+++ b/views/lite.ejs
@@ -183,22 +183,22 @@ $('#utilityDataFile').change(function(){
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/" class="brand">EEB Hub Simulation Platform</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="active">
-                                <a href="/lite">LITE</a>
-                            </li>
-                            <li>
-                                <a href="/partial">PARTIAL</a>
-                            </li>
-                            <li>
-                                <a href="/substantial">SUBSTANTIAL</a>
-                            </li>
-                            <li>
-                                <a href="/comprehensive">COMPREHENSIVE</a>
-                            </li>
-                        </ul>
+                   <a class="brand" href="/platform/">EEB Hub Simulation Platform</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li>
+                            <a href="lite">LITE</a>
+                        </li>
+                        <li>
+                            <a href="partial">PARTIAL</a>
+                        </li>
+                        <li>
+                            <a href="substantial">SUBSTANTIAL</a>
+                        </li>
+                        <li>
+                            <a href="comprehensive">COMPREHENSIVE</a>
+                        </li>
+                    </ul>
                         
                         <div class="pull-right text-right">
 
