--- a/views/partial.ejs
+++ b/views/partial.ejs
@@ -68,22 +68,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/" class="brand">EEB Hub Simulation Platform</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="">
-                                <a href="/lite">LITE</a>
-                            </li>
-                            <li class="active">
-                                <a href="/partial">PARTIAL</a>
-                            </li>
-                            <li>
-                                <a href="/substantial">SUBSTANTIAL</a>
-                            </li>
-                            <li>
-                                <a href="/comprehensive">COMPREHENSIVE</a>
-                            </li>
-                        </ul>
+                  <a class="brand" href="/platform/">EEB Hub Simulation Platform</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li>
+                            <a href="lite">LITE</a>
+                        </li>
+                        <li>
+                            <a href="partial">PARTIAL</a>
+                        </li>
+                        <li>
+                            <a href="substantial">SUBSTANTIAL</a>
+                        </li>
+                        <li>
+                            <a href="comprehensive">COMPREHENSIVE</a>
+                        </li>
+                    </ul>
                     </div>
                     <!--/.nav-collapse -->
                     <div class="pull-right text-right">
