--- a/views/substantial.ejs
+++ b/views/substantial.ejs
@@ -7,10 +7,10 @@
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/css/stylesheet.css" rel="stylesheet">
-        <link href="/css/partial.css" rel="stylesheet">
-        <link rel="stylesheet" href="/css/bootstrap-switch.css" />
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/stylesheet.css" rel="stylesheet">
+        <link href="css/partial.css" rel="stylesheet">
+        <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
         <style type="text/css">
 
             #filter {
@@ -158,22 +158,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="/">EEB Hub Simulation Platform</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li>
-                                <a href="/lite">LITE</a>
-                            </li>
-                            <li>
-                                <a href="/partial">PARTIAL</a>
-                            </li>
-                            <li class="active">
-                                <a href="/substantial">SUBSTANTIAL</a>
-                            </li>
-                            <li>
-                                <a href="/comprehensive">COMPREHENSIVE</a>
-                            </li>
-                        </ul>
+                   <a class="brand" href="/platform/">EEB Hub Simulation Platform</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li>
+                            <a href="lite">LITE</a>
+                        </li>
+                        <li>
+                            <a href="partial">PARTIAL</a>
+                        </li>
+                        <li>
+                            <a href="substantial">SUBSTANTIAL</a>
+                        </li>
+                        <li>
+                            <a href="comprehensive">COMPREHENSIVE</a>
+                        </li>
+                    </ul>
                     </div>
                     <!--/.nav-collapse -->
                     <div class="pull-right text-right">
